--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,180 @@
-.App {
+* {
+  margin: 0 auto;
+}
+
+body {
+  background-color: #cac7c3;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+}
+
+.home {
+  display: grid;
+  grid-template-columns: 35% 40%;
+  grid-gap: 1vw;
+  margin-top: 3vw;
+}
+
+.home p {
+  margin-top: 1px;
+}
+
+.home h3 {
+  margin-bottom: 1px;
+}
+
+.image {
+  grid-area: 1 / 1 / span 2 / 1;
+  margin: 1.5vw;
+  margin-left: 60%;
+  border-radius: 5%;
+  box-shadow: 5px 5px 5px 0 rgba(66, 67, 70, 0.4);
+}
+
+.about-me {
+  margin: 1.5vw;
+}
+
+.footer {
   text-align: center;
+  background-color: #192538;
+  color: #c5c5c2;
+  padding: 30px;
+  margin-top: 3vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.link {
+  color:#c5c5c2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.secretButton {
+  margin-left: 75vw;
+  margin-top: 15vw;
+  background: transparent;
+  border: none !important;
+  font-size: 0;
+  cursor: pointer;
+  min-width: 5vw;
+  min-height: 5vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.spinner-border {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10vw;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  height: 50px;
+  margin: 20px;
+  margin-left: 0;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.portfolio {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20%;
+  justify-content: space-evenly;
+  margin-top: 3vw;
+  max-width: 700px; 
+  background-color: #192538;
+  color: #c5c5c2;
+  border-radius: 25px;
+  box-shadow: 5px 5px 5px 0 rgba(66, 67, 70, 0.4);
+}
+
+.portfolio li {
+  margin: 25px;
+  text-decoration: none;
+}
+
+.info {
+  display: inline-block;
+  margin: 33%;
+  margin-bottom: 0;
+  margin-top: 3vw;
+  max-width: 700px;
+  background-color: #192538;
+  color: #c5c5c2;
+  border-radius: 25px;
+  box-shadow: 5px 5px 5px 0 rgba(66, 67, 70, 0.4);
+}
+
+.info li {
+  margin: 25px
+}
+
+form {
+  text-align: center;
+  line-height: 30px;
+  height: 80%;
+  overflow: auto;
+  margin-bottom: 15px;
+  letter-spacing: 1.5px;
+}
+
+form h1 {
+  margin-top: 2%;
+  padding: 5px;
+}
+
+form h3 {
+  margin: 5px;
+}
+
+@media all and (max-width: 1700px) {
+  .info {
+    margin: 25%;
+    margin-top: 5%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .image {
+    margin-left: 30%;
+  }
+}
+
+@media all and (max-width: 1300px) {
+  .image {
+    margin-left: 30%;
+    max-width: 30%;
+  }
+
+  .home {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3vw;
+  }
+
+  .about-me {
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+
+  .portfolio {
+    display: grid;
+    grid-template-columns: 15% 15% 15% 15%;
+  }
+
+  .portfolio li {
+    margin: 0;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .info {
+    margin: 15%;
+    margin-top: 5%;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .portfolio {
+    grid-template-columns: 15% 15% 15%;
+    justify-content: space-around;
+  }
+
+  .portfolio li {
+    margin: 0;
   }
 }
